[APPDEV-659] UI Fixes    IE CRM promo list horizontal scroll
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@10593 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/ccassets/css/promo.css
+++ b/projects/Media/docroot/ccassets/css/promo.css
@@ -97,11 +97,12 @@
 	height: 76%;
 }
 .promo_page_content-view_content5 {
-	overflow-y: auto;
+	overflow: auto;
 	border: 1px solid #000;
 	min-height: 520px;
 	max-height: 520px;
 	height: 76%;
+	width: 100%;
 }
 a.greenLink, a.greenLink:hover, a.greenLink:active {
 	color: #093;
